tests/baselines/reference/enumWithoutInitializerAfterComputedMember.errors.txt
==== tests/cases/compiler/enumWithoutInitializerAfterComputedMember.ts (1 errors) ====
    enum E {
        a,
        b = a,
        c
        ~
!!! enumWithoutInitializerAfterComputedMember.ts(4,5): error TS1061: Enum member must have initializer.
    }